fix(links): rename read operation to get
closes #676
